# NumpyAppenderCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  numpy_reader.py
src/: numpy_appender.hpp
